eos-nw depth buffer used & uniform buffer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "xproto.h": "c",
         "shared_mutex": "c",
         "buggle.h": "c",
-        "xcbwindow.h": "c"
+        "xcbwindow.h": "c",
+        "mvk_core.h": "c"
     }
 }
