dfp more complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "shared_mutex": "c",
         "buggle.h": "c",
         "xcbwindow.h": "c",
-        "mvk_core.h": "c"
+        "mvk_core.h": "c",
+        "*.inc": "c"
     }
 }
