--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "buggle.h": "c",
         "xcbwindow.h": "c",
         "mvk_core.h": "c",
-        "*.inc": "c"
+        "*.inc": "c",
+        "*.mc": "c"
     }
 }
