refactoring of error handling and core source loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "xcbwindow.h": "c",
         "mvk_core.h": "c",
         "*.inc": "c",
-        "*.mc": "c"
+        "*.mc": "c",
+        "*.def": "c"
     },
 }
