fixed rendering usage problem

--- a/midge.cfg
+++ b/midge.cfg
@@ -2,4 +2,6 @@
 major = 0
 minor = 1
 [GENERAL]
-vulkan_sdk = "/path/to/vulkan-sdk-1.2.141.2"
+stddef.h=/usr/lib/gcc/x86_64-linux-gnu/9/include/
+# vulkan_sdk = "/path/to/vulkan-sdk-1.2.141.2"
+vulkan_sdk = "/home/shimmy/prog/vulkansdk-1.2.148.1/"
