--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,5 @@
     // "C_Cpp.clang_format_path": ".clang-format",
     // "C_Cpp.clang_format_style": "file",
     // "C_Cpp.clang_format_fallbackStyle": "none",
-    "editor.formatOnSave": true,
+    // "editor.formatOnSave": true,
 }
