--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,9 @@
         "mc_error_handling.h": "c",
         "midge_app.h": "c",
         "m_threads.h": "c",
-        "pthread.h": "c"
+        "pthread.h": "c",
+        "render_util.h": "c",
+        "mc_source.h": "c"
     },
     "powermode.enabled": true,
     "powermode.enableShake": false
